--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "chevrotain": "^9.1.0",
+    "classnames": "^2.3.1",
     "leva": "^0.9.18",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
