--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chevrotain": "^9.1.0",
     "classnames": "^2.3.1",
+    "gsap": "^3.9.1",
     "leva": "^0.9.18",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
