--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-headroom": "^3.2.0",
     "react-scripts": "5.0.0",
     "three": "^0.135.0",
     "three-js-csg-es6": "^73.0.0",
+    "use-font-face-observer": "^1.1.77",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
