--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leva": "^0.9.18",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-headroom": "^3.2.0",
     "react-scripts": "5.0.0",
