--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-headroom": "^3.2.0",
     "react-scripts": "5.0.0",
     "three": "^0.135.0",
